--- a/Public/apply.html
+++ b/Public/apply.html
@@ -1333,7 +1333,7 @@
                                                             href='tencent://message/?uin=597800451&Site=Sambow&Menu=yes'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/qq.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/qq.png">
                                                         <div class="icon-tip">
                                                             QQ: 597800451
                                                         </div>
@@ -1345,7 +1345,7 @@
                                                             href='javascript:;'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/wechat.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/wechat.png">
                                                         <div class="icon-tip-wx">
                                                             <img style="width: 85%;height: 85%;display: inline-block;transform: translateY(10px)"
                                                                  src="https://storage.froghub.io/froghub-home-html/assets/wx.png" width=52 height=52 alt="">
@@ -1359,7 +1359,7 @@
                                                             class='icon et_pb_with_border'
                                                             target="_blank"
                                                     >
-                                                        <img src="assets/github_icon.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/github_icon.png">
                                                     </a>
                                                 </li>
                                             </ul> <!-- .et_pb_counters -->
