--- a/Public/frogfs.html
+++ b/Public/frogfs.html
@@ -1276,7 +1276,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_28  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_image et_pb_image_29">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/high_performance.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/high_performance.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1290,7 +1290,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_25  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_image et_pb_image_29">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/erasure_coding.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/erasure_coding.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1326,7 +1326,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_28  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_image et_pb_image_28">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/bitrot_protection.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/bitrot_protection.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1340,7 +1340,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_25  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_image et_pb_image_28">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/aws-s3.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/aws-s3.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1380,7 +1380,7 @@
                                             <div>
                                                 <div class="et_pb_module et_pb_image et_pb_image_36">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/cpu.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/cpu.png"
                                                         alt="" title=""/></span>
                                                 </div>
                                             </div>
@@ -1395,7 +1395,7 @@
                                             <div>
                                                 <div class="et_pb_module et_pb_image et_pb_image_36">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/driver.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/driver.png"
                                                         alt="" title=""/></span>
                                                 </div>
                                             </div>
@@ -1412,7 +1412,7 @@
                                             <div>
                                                 <div class="et_pb_module et_pb_image et_pb_image_36">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/netcard.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/netcard.png"
                                                         alt="" title=""/></span>
                                                 </div>
                                             </div>
@@ -1427,7 +1427,7 @@
                                             <div>
                                                 <div class="et_pb_module et_pb_image et_pb_image_36">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/ram.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/ram.png"
                                                         alt="" title=""/></span>
                                                 </div>
                                             </div>
@@ -1506,7 +1506,7 @@
                                                             href='tencent://message/?uin=597800451&Site=Sambow&Menu=yes'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/qq.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/qq.png">
                                                         <div class="icon-tip">
                                                             QQ: 597800451
                                                         </div>
@@ -1518,7 +1518,7 @@
                                                             href='javascript:;'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/wechat.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/wechat.png">
                                                         <div class="icon-tip-wx">
                                                             <img style="width: 85%;height: 85%;display: inline-block;transform: translateY(10px)"
                                                                  src="https://storage.froghub.io/froghub-home-html/assets/wx.png" width=52 height=52 alt="">
@@ -1532,7 +1532,7 @@
                                                             class='icon et_pb_with_border'
                                                             target="_blank"
                                                     >
-                                                        <img src="assets/github_icon.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/github_icon.png">
                                                     </a>
                                                 </li>
                                             </ul> <!-- .et_pb_counters -->
