--- a/Public/files.html
+++ b/Public/files.html
@@ -1251,7 +1251,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_image et_pb_image_0">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/web3.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/web3.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1278,7 +1278,7 @@
                                             </div> <!-- .et_pb_text -->
                                         </div> <!-- .et_pb_column -->
                                         <div class="et_pb_text_align_center et_pb_text_align_center-image">
-                                            <img src="assets/permanently.png">
+                                            <img src="https://storage.froghub.io/froghub-home-html/assets/permanently.png">
                                         </div>
                                     </div> <!-- .et_pb_row -->
                                 </div>
@@ -1299,7 +1299,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_image et_pb_image_0">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/files_banner_right.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/files_banner_right.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1314,7 +1314,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_25  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_image et_pb_image_28">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/protect.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/protect.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1346,7 +1346,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_28  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_image et_pb_image_29">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/s3.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/s3.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1434,7 +1434,7 @@
                                                             href='tencent://message/?uin=597800451&Site=Sambow&Menu=yes'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/qq.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/qq.png">
                                                         <div class="icon-tip">
                                                             QQ: 597800451
                                                         </div>
@@ -1446,7 +1446,7 @@
                                                             href='javascript:;'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/wechat.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/wechat.png">
                                                         <div class="icon-tip-wx">
                                                             <img style="width: 85%;height: 85%;display: inline-block;transform: translateY(10px)"
                                                                  src="https://storage.froghub.io/froghub-home-html/assets/wx.png" width=52 height=52 alt="">
@@ -1460,7 +1460,7 @@
                                                             class='icon et_pb_with_border'
                                                             target="_blank"
                                                     >
-                                                        <img src="assets/github_icon.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/github_icon.png">
                                                     </a>
                                                 </li>
                                             </ul> <!-- .et_pb_counters -->
