--- a/Public/files.html
+++ b/Public/files.html
@@ -1245,7 +1245,7 @@
                                             </div> <!-- .et_pb_text -->
                                             <div class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_tablet_center et_pb_module ">
                                                 <a class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
-                                                   href="http://file.froghub.io" target="_blank">{{$t('Store My Data')}}</a>
+                                                   href="https://files.froghub.io" target="_blank">{{$t('Store My Data')}}</a>
                                             </div>
                                         </div> <!-- .et_pb_column -->
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
@@ -1363,7 +1363,7 @@
                                             </div> <!-- .et_pb_text -->
                                             <div class="et_pb_button_module_wrapper et_pb_button_11_wrapper et_pb_button_alignment_center et_pb_button_alignment_tablet_center et_pb_module ">
                                                 <a class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
-                                                   href="http://file.froghub.io" target="_blank">{{$t('Store My Data')}}</a>
+                                                   href="https://files.froghub.io" target="_blank">{{$t('Store My Data')}}</a>
                                             </div>
                                         </div> <!-- .et_pb_column -->
                                     </div> <!-- .et_pb_row -->
